// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CQRS - query Tests should deleteByEntityId 1`] = `
Object {
  "status": "1 number of record deleted successful",
}
`;

exports[`CQRS - query Tests should deleteByEntityName 1`] = `
Object {
  "status": "all records deleted successfully",
}
`;

exports[`CQRS - query Tests should merge 1`] = `
Object {
  "entityName": "dev_test",
  "events": Array [
    Object {
      "payload": Object {
        "name": "April",
      },
      "type": "User Created",
    },
  ],
  "id": "unit_test_01",
  "version": 0,
}
`;

exports[`CQRS - query Tests should queryByEntityId 1`] = `Object {}`;

exports[`CQRS - query Tests should queryByEntityName #2 1`] = `
Object {
  "entityName": "dev_test",
  "events": Array [
    Object {
      "payload": Object {
        "name": "May",
      },
      "type": "User Created",
    },
  ],
  "id": "unit_test_01",
  "version": 0,
}
`;

exports[`CQRS - query Tests should queryByEntityName #2 2`] = `
Object {
  "entityName": "dev_test",
  "events": Array [
    Object {
      "payload": Object {
        "name": "May",
      },
      "type": "User Created",
    },
  ],
  "id": "unit_test_01",
  "version": 0,
}
`;

exports[`CQRS - query Tests should queryByEntityName 1`] = `Object {}`;
